fix: Content in feedback row vertically aligned.

--- a/_assets/css/_styles.scss
+++ b/_assets/css/_styles.scss
@@ -1906,6 +1906,10 @@ article table tr {
             outline: none;
         }
     }
+
+    div.feedback > div {
+      line-height: 23px;
+    }
 }
 
 .feedback-dialog {
